Del views addon & Add print addon and goToDiscuss addon

--- a/src/content/posts/.obsidian/app.json
+++ b/src/content/posts/.obsidian/app.json
@@ -2,5 +2,11 @@
   "newLinkFormat": "relative",
   "useMarkdownLinks": true,
   "attachmentFolderPath": "assets/images",
-  "promptDelete": false
+  "promptDelete": false,
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
